--- a/index.html
+++ b/index.html
@@ -1,49 +1,91 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Flash2014 by remoideas</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+  <title>Flash2014 by remoideas</title>
+  <link rel="stylesheet" href="stylesheets/styles.css">
+  <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script src="javascripts/respond.js"></script>
+  <!--[if lt IE 9]>
+  <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+  <!--[if lt IE 8]>
+  <link rel="stylesheet" href="stylesheets/ie.css">
+  <![endif]-->
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"></head>
+<body>
+  <div id="header">
+    <nav>
+      <li class="fork">
+        <a href="https://github.com/remoideas/flash2014">View On GitHub</a>
+      </li>
+      <li class="downloads">
+        <a href="https://github.com/remoideas/flash2014/zipball/master">ZIP</a>
+      </li>
+      <li class="downloads">
+        <a href="https://github.com/remoideas/flash2014/tarball/master">TAR</a>
+      </li>
+      <li class="title">DOWNLOADS</li>
+    </nav>
+  </div>
+  <!-- end header -->
 
-  </head>
-  <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/remoideas/flash2014">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/remoideas/flash2014/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/remoideas/flash2014/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
+  <div class="wrapper">
 
-    <div class="wrapper">
-
-      <section>
-        <div id="title">
-          <h1>Flash2014</h1>
-          <p></p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/remoideas">remoideas</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+    <section>
+      <div id="title">
+        <h1>Flash 2014</h1>
+        <div class="portafoli-alumnos">
+        <h2>Portafolio de Alumnos</h2>
+        <p>
+          <ul>
+            <li><a href="http://spotades.github.io/Flash-2014-/" target="_blanck">Alejandro</a></li>
+            <li><a href="http://erickpolit.github.io/flash2014/" target="_blanck">Erick</a></li>
+            <li><a href="http://asahed.github.io/flash/" target="_blanck">Asahed</a></li>
+            <li><a href="http://josephluisck.github.io/Flash2014/" target="_blanck">José Luis</a></li>
+            <li><a href="http://guiam.github.io/flash/" target="_blanck">Guillermo</a></li>
+            <li><a href="http://anniehdz.github.io/flash" target="_blanck">Ana Laura</a></li>
+            <li><a href="http://alehsakura.github.io/flash/" target="_blanck">Alejandra</a></li>
+          </ul>
+        </p>
         </div>
 
-        <h3>
-<a name="curso-de-flash" class="anchor" href="#curso-de-flash"><span class="octicon octicon-link"></span></a>Curso de Flash</h3>
-      </section>
+        <h2>Portafolio del Profesor</h2>
 
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
-  </body>
+        <p>
+          
+          <ul>
+            <li><a href="texto1/index.html">Actividad texto 1</a></li>
+            <li><a href="balones/index.html">Actividad Balones</a></li>
+          </ul>
+
+        </p>
+
+        <hr>
+        <span class="credits left">
+          Project maintained by
+          <a href="https://github.com/remoideas">remoideas</a>
+        </span>
+        <span class="credits right">
+          Hosted on GitHub Pages &mdash; Theme by
+          <a href="https://twitter.com/michigangraham">mattgraham</a>
+        </span>
+      </div>
+
+      <h3>
+        <a name="curso-de-flash" class="anchor" href="#curso-de-flash">
+          <span class="octicon octicon-link"></span>
+        </a>
+        Curso de Flash
+      </h3>
+    </section>
+
+  </div>
+  <!--[if !IE]>
+  <script>fixScale(document);</script>
+  <![endif]-->
+
+</body>
 </html>
