Agregué mis actividades

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
           <ul>
             <li><a href="texto1/index.html">Actividad texto 1</a></li>
             <li><a href="balones/index.html">Actividad Balones</a></li>
+            <li><a href="rostro/index.html">Actividad dibujo Rostro</a></li>
+            <li><a href="examen1/index.html">Examen 1er Parcial</a></li>
+            <li><a href="bateo/index.html">Actividad Personaje bateando</a></li>
           </ul>
 
         </p>
