Agregue nueva actividad

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
             <li><a href="balones/index.html">Actividad Balones</a></li>
             <li><a href="rostro/index.html">Actividad dibujo Rostro</a></li>
             <li><a href="examen1/index.html">Examen 1er Parcial</a></li>
-            <li><a href="bateo/index.html">Actividad Personaje bateando</a></li>
+            <li><a href="bateo/index.html">Actividad Personaje bateando 1</a></li>
+            <li><a href="bateo2/index.html">Actividad Personaje bateando 2</a></li>
           </ul>
 
         </p>
