Actualización de actividades y link de Asahed.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <ul>
             <li><a href="http://spotades.github.io/Flash-2014-/" target="_blanck">Alejandro</a></li>
             <li><a href="http://erickpolit.github.io/flash2014/" target="_blanck">Erick</a></li>
-            <li><a href="http://asahed.github.io/flash/" target="_blanck">Asahed</a></li>
+            <li><a href="http://asahed.github.io/flash2014/" target="_blanck">Asahed</a></li>
             <li><a href="http://ljlljlljl.github.io/flash2014/" target="_blanck">José Luis</a></li>
             <li><a href="http://guiam.github.io/flash/" target="_blanck">Guillermo</a></li>
             <li><a href="http://anniehdz.github.io/flash" target="_blanck">Ana Laura</a></li>
@@ -64,6 +64,8 @@
             <li><a href="examen1/index.html">Examen 1er Parcial</a></li>
             <li><a href="bateo/index.html">Actividad Personaje bateando 1</a></li>
             <li><a href="bateo2/index.html">Actividad Personaje bateando 2</a></li>
+            <li><a href="dia-noche/index.html">Actividad Día Noche</a></li>
+            <li><a href="movimiento/index.html">Actividad Acción</a></li>
           </ul>
 
         </p>
